--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 
 <html>
+	<script>
+  window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 	<head><meta http-equiv="Content-Type" content="text/html; charset=utf-8"/><title>📚 SYNTHÈSE DES NOTIONS À MAÎTRISER</title><style>
 /* cspell:disable-file */
 /* webkit printing magic: print all background colors */
@@ -777,5 +781,5 @@ Début
     d ← sqrt((xa - xb)^2 + (ya - yb)^2)
     Retourne d
 Fin
-<script>import { Analytics } from "@vercel/analytics/next"</script>
+
 </code></pre></div></article><span class="sans" style="font-size:14px;padding-top:2em"></span></body></html>
